add demo asstes

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ litellm_docs.txt
 litellm_relevant_docs.md
 all_models_capabilities.csv
 temp_test_expiry.py
+demo/DEPLOYMENT_GUIDE.md
+demo/README.md
