Update docker-compose.demo.yml to specify the correct Dockerfile path for the homebox-companion service

--- a/demo/docker-compose.demo.yml
+++ b/demo/docker-compose.demo.yml
@@ -39,7 +39,7 @@ services:
   homebox-companion:
     build:
       context: ..
-      dockerfile: Dockerfile
+      dockerfile: demo/Dockerfile.demo
     container_name: demo-homebox-companion
     restart: unless-stopped
     environment:
