Implement configurable capture limits for image uploads
- Added new environment variables for maximum images per capture session and maximum file size per image.
- Updated API configuration to include capture limits in the response model.
- Modified the capture page to load these limits from the configuration, replacing hardcoded defaults.
- Enhanced file handling logic to enforce the new limits during image uploads, improving user experience and data management.

--- a/.env.example
+++ b/.env.example
@@ -102,6 +102,19 @@ HBC_MAX_UPLOAD_SIZE_MB=20
 HBC_CORS_ORIGINS=*
 
 # ============================================================================
+# CAPTURE LIMITS
+# ============================================================================
+# Photos taken through this app are NOT saved to your device's photo gallery.
+# These limits minimize potential data loss if something goes wrong during a
+# capture session. Increase at your own risk.
+
+# Maximum images per capture session (default: 30)
+# HBC_CAPTURE_MAX_IMAGES=30
+
+# Maximum file size per image in MB (default: 10)
+# HBC_CAPTURE_MAX_FILE_SIZE_MB=10
+
+# ============================================================================
 # AI OUTPUT CUSTOMIZATION (Optional)
 # ============================================================================
 # These settings control how the AI formats detected item data.
