Update project configurations and enhance chat functionality
- Added `ignore` rule for FastAPI `Depends()` idiomatic usage in `pyproject.toml`.
- Updated `package.json` to include thresholds and diagnostic sources for `svelte-check`.
- Refactored chat API methods to improve logging and error handling.
- Enhanced chat orchestrator with detailed tool usage best practices in the system prompt.
- Improved session management and approval handling in chat functionality.
- Added new methods in `HomeboxClient` for item and location management, including search and statistics retrieval.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,9 @@ select = [
     "UP",
     "I",
 ]
+ignore = [
+    "B008",  # FastAPI Depends() in function defaults is idiomatic
+]
 
 [tool.pytest.ini_options]
 # Default: run unit + integration tests (fast, reliable)
