--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,8 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --threshold warning --diagnostic-sources js,svelte",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch --threshold warning --diagnostic-sources js,svelte"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^3.0.0",
