Add LLM streaming timeout configuration and update documentation
- Introduced a new environment variable `HBC_LLM_STREAM_TIMEOUT` for configuring the streaming timeout for large LLM responses, defaulting to 300 seconds.
- Updated the LLM client to utilize the new streaming timeout for better handling of large responses.
- Enhanced the README and example environment file to reflect the new configuration option, improving clarity for users.

--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,10 @@ HBC_LLM_MODEL=gpt-5-mini
 # How long to wait for the LLM API to respond before giving up
 # HBC_LLM_TIMEOUT=120
 
+# LLM streaming timeout in seconds (default: 300)
+# Longer timeout for streaming responses like hierarchical views with many items
+# HBC_LLM_STREAM_TIMEOUT=300
+
 # ============================================================================
 # LEGACY OPENAI VARIABLES (Deprecated - use HBC_LLM_* instead)
 # ============================================================================
