chore: update gitignore for fork development
Add exclusions for:
- .claude/ directory (credentials and local config)
- Fork specification documents (local development only)

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,24 @@ server/static/
 # OS files
 .DS_Store
 Thumbs.db
+
+# Claude Code configuration (contains credentials)
+.claude/
+
+# Fork specification documents (local development only)
+PROJECT_SPEC.md
+DEVELOPMENT_GUIDE.md
+AI_PROVIDERS.md
+STATE_MANAGEMENT.md
+DOCKER_SPEC.md
+UI_SPEC.md
+API_SPEC.md
+CONFIG_SCHEMA.md
+PROMPTS.md
+ENRICHMENT.md
+ARCHITECTURE.md
+CLAUDE.md
+.gitignore.suggested
 homebox_api.json
 litellm_docs.txt
 litellm_relevant_docs.md
