Update .env.example and README.md to include HBC_LINK_BASE_URL configuration
- Added a new configuration option, HBC_LINK_BASE_URL, to .env.example for specifying a public URL for Homebox links in chat.
- Updated README.md to document the new HBC_LINK_BASE_URL option, clarifying its purpose and default behavior.

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,11 @@ HBC_LLM_API_KEY=sk-your-api-key-here
 #   - Demo: https://demo.homebox.software
 HBC_HOMEBOX_URL=http://localhost:7745
 
+# Public URL for Homebox links in chat (default: same as HBC_HOMEBOX_URL)
+# Use when your API accesses Homebox internally but users access it via a public URL.
+# Example: API uses http://homebox:7745, users access https://homebox.example.com
+# HBC_LINK_BASE_URL=https://homebox.example.com
+
 # ============================================================================
 # LLM CONFIGURATION
 # ============================================================================
